[FIX] fixed padding of cta on mobile

--- a/components/cta-section/cta-section.css
+++ b/components/cta-section/cta-section.css
@@ -19,6 +19,15 @@
 
 @media (max-width: 60rem) {
   .mf_cta_section_img_wrapper {
-    height: 200px;
+    height: 350px;
+  }
+
+  .mf_cta_section_img_wrapper img {
+    width: 100%;
+  }
+
+  .mf_cta_section_col {
+    padding: 0 !important;
+    margin: 0 !important;
   }
 }
